[project]
name = "comfyui-snakeoil"
description = "Use [a/Doctor Diffusion's snake oil nLoRAs](https://civitai.com/models/987843) as well as [a/other negative LoRAs](https://civitai.com/models/186617/doctor-diffusions-negative-xl-lora) easily within ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/DoctorDiffusion/ComfyUI-SnakeOil"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SnakeOil"
Icon = ""
